fix: warnings during test and use mockito as agent mode